Update to Java 18, Junit 5.8.2, and maven-compiler to 3.10.1.